Fixed the overflow (Finally!!!!!!!!!!)

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,6 @@ body {
   background-color: hsl(0, 0%, 98%);
   font-size: var(--font-size);
   min-height: 100vh;
-  overflow: hidden;
 }
 h1 {
   font-weight: 500;
@@ -61,18 +60,27 @@ img {
   justify-content: center;
   position: relative;
 }
-.right-section::after {
+.right-section > div {
+  position: absolute;
+  width: 520px;
+  height: 700px;
+  opacity: 0.05;
+  right: -180px;
+  bottom: 0;
+  overflow: hidden;
+  z-index: -1;
+}
+.right-section div::after {
   content: "";
   position: absolute;
-  background: linear-gradient(to top, hsl(264, 100%, 61%), hsl(293, 100%, 63%));
+  top: 0;
+  left: 0;
   width: 520px;
   height: 700px;
   border-top-left-radius: 520px;
   border-top-right-radius: 520px;
-  opacity: 0.05;
-  right: -180px;
-  bottom: 0;
   z-index: -1;
+  background: linear-gradient(to top, hsl(264, 100%, 61%), hsl(293, 100%, 63%));
 }
 .right-section h1 {
   margin-bottom: 20px;
@@ -345,7 +353,6 @@ img {
 @media (max-width: 950px) {
   body {
     flex-direction: column;
-    height: 903px;
   }
   .left-section {
     height: 650px;
@@ -374,9 +381,10 @@ img {
     left: -350px;
     top: -200px;
   }
-  .right-section::after {
-    right: -340px;
+  .right-section > div {
+    right: 0;
     bottom: -50px;
+    width: 180px;
     height: 500px;
   }
   .phone {
